Updated Categorization flow
Updated Dashboard and Categorization pages; simplified layout until more is known about controls and patterns required.

--- a/projects/amen/views/dashboard/index.html
+++ b/projects/amen/views/dashboard/index.html
@@ -67,7 +67,7 @@
                       <path d="M12 15v-10" />
                     </svg>
                   </span>
-                  <a href="" class="button tertiary">Edit</a>
+                  <!-- <a href="" class="button tertiary">Edit</a> -->
                 </span>
               </li>
               <li>Lab Results
@@ -87,7 +87,7 @@
                       <path d="M12 15v-10" />
                     </svg>
                   </span>
-                  <a href="" class="button tertiary">Edit</a>
+                  <!-- <a href="" class="button tertiary">Edit</a> -->
                 </span>
               </li>
               <li>Order Requests
@@ -107,9 +107,84 @@
                       <path d="M12 15v-10" />
                     </svg>
                   </span>
-                  <a href="" class="button tertiary">Edit</a>
+                  <!-- <a href="" class="button tertiary">Edit</a> -->
                 </span>
               </li>
+            </ul>
+            <ul class="options">
+              <li>Edit Categorization<a href="projects/amen/views/categorization/index.html#yale-medical-center"
+                  class="button tertiary">Edit</a></li>
+              <li>Edit Configuration<button class="tertiary" disabled>Edit</button></li>
+            </ul>
+          </div>
+          <div class="card">
+            <h3>Tufts</h3>
+            <ul class="options">
+              <li>ADT Patient Data
+                <span class="action">
+                  <span class="status valid">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                      stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
+                      class="icon icon-tabler icons-tabler-outline icon-tabler-check valid">
+                      <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                      <path d="M5 12l5 5l10 -10" />
+                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                      stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
+                      class="icon icon-tabler icons-tabler-outline icon-tabler-exclamation-mark invalid">
+                      <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                      <path d="M12 19v.01" />
+                      <path d="M12 15v-10" />
+                    </svg>
+                  </span>
+                  <!-- <a href="" class="button tertiary">Edit</a> -->
+                </span>
+              </li>
+              <li>Lab Results
+                <span class="action">
+                  <span class="status valid">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                      stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
+                      class="icon icon-tabler icons-tabler-outline icon-tabler-check valid">
+                      <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                      <path d="M5 12l5 5l10 -10" />
+                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                      stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
+                      class="icon icon-tabler icons-tabler-outline icon-tabler-exclamation-mark invalid">
+                      <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                      <path d="M12 19v.01" />
+                      <path d="M12 15v-10" />
+                    </svg>
+                  </span>
+                  <!-- <a href="" class="button tertiary">Edit</a> -->
+                </span>
+              </li>
+              <li>Order Requests
+                <span class="action">
+                  <span class="status valid">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                      stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
+                      class="icon icon-tabler icons-tabler-outline icon-tabler-check valid">
+                      <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                      <path d="M5 12l5 5l10 -10" />
+                    </svg>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                      stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
+                      class="icon icon-tabler icons-tabler-outline icon-tabler-exclamation-mark invalid">
+                      <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                      <path d="M12 19v.01" />
+                      <path d="M12 15v-10" />
+                    </svg>
+                  </span>
+                  <!-- <a href="" class="button tertiary">Edit</a> -->
+                </span>
+              </li>
+            </ul>
+            <ul class="options">
+              <li>Edit Categorization<a href="projects/amen/views/categorization/index.html#tufts"
+                  class="button tertiary">Edit</a></li>
+              <li>Edit Configuration<button class="tertiary" disabled>Edit</button></li>
             </ul>
           </div>
         </div>
