--- a/style/_scss/_buttons.scss
+++ b/style/_scss/_buttons.scss
@@ -54,6 +54,42 @@ button.tertiary,
 }
 
 
+// DISABLED BUTTONS
+button.primary:disabled,
+.button.primary:disabled {
+  border-color: $color--status-disabled;
+  background-color: $color--status-disabled;
+
+  &:hover,
+  &:focus {
+    border-color: $color--status-disabled;
+    background-color: $color--status-disabled;
+  }
+}
+
+button.secondary:disabled,
+.button.secondary:disabled {
+  border-color: $color--status-disabled;
+  color: $color--status-disabled;
+
+  &:hover,
+  &:focus {
+    border-color: $color--status-disabled;
+    color: $color--status-disabled;
+  }
+}
+
+button.tertiary:disabled,
+.button.tertiary:disabled {
+  color: $color--status-disabled;
+
+  &:hover,
+  &:focus {
+    color: $color--status-disabled;
+  }
+}
+
+
 // BUTTONS DARK MODE
 html.dark {
 
@@ -96,6 +132,40 @@ html.dark {
     &:hover,
     &:focus {
       color: $color--action-dark-hover;
+    }
+  }
+
+  button.primary:disabled,
+  .button.primary:disabled {
+    border-color: $color--status-disabled;
+    background-color: $color--status-disabled;
+
+    &:hover,
+    &:focus {
+      border-color: $color--status-disabled;
+      background-color: $color--status-disabled;
+    }
+  }
+
+  button.secondary:disabled,
+  .button.secondary:disabled {
+    border-color: $color--status-disabled;
+    color: $color--status-disabled;
+
+    &:hover,
+    &:focus {
+      border-color: $color--status-disabled;
+      color: $color--status-disabled;
+    }
+  }
+
+  button.tertiary:disabled,
+  .button.tertiary:disabled {
+    color: $color--status-disabled;
+
+    &:hover,
+    &:focus {
+      color: $color--status-disabled;
     }
   }
 }
@@ -161,7 +231,7 @@ html.dark {
 
     &:hover,
     &:focus {
-      background-color: rgba(230,230,230,0.25);
+      background-color: rgba(230, 230, 230, 0.25);
     }
   }
 }
