--- a/projects/amen/views/categorization/adt-categoriztion-r2.html
+++ b/projects/amen/views/categorization/adt-categoriztion-r2.html
@@ -49,114 +49,56 @@
         <h3>ADT Patient Data Categorization</h3>
         <div class="row cards">
           <div class="card">
-            <h4>HL7 Field Mapping</h4>
-            <form>
+            <h4>HL7 Configuration</h4>
+            <form id="adt-hl7-server-setup">
               <fieldset>
-                <label for="adt-hl7-event-type">Event Type</label>
-                <input type="text" id="adt-hl7-event-type" name="adt-hl7-event-type" value="MHS[1].5.1">
+                <label for="hl7-local-ip-address">Local IP Address</label>
+                <input type="text" id="hl7-local-ip-address" name="hl7-local-ip-address" value="127.0.0.1" readonly>
+              </fieldset>
+              <fieldset class="small">
+                <label for="hl7-local-port">Local Port</label>
+                <input type="text" id="hl7-local-port" name="hl7-local-port" value="8000" readonly>
+              </fieldset>
+              <fieldset class="small">
+                <label for="hl7-connection-timeout">Connection Timeout (sec)</label>
+                <input type="number" id="hl7-connection-timeout" name="hl7-connection-timeout" value="86400" readonly>
               </fieldset>
               <fieldset>
-                <label for="adt-hl7-patient-name">Patient Name</label>
-                <input type="text" id="adt-hl7-patient-name" name="adt-hl7-patient-name" value="PID[1].3">
-              </fieldset>
-              <fieldset>
-                <label for="adt-hl7-patient-current-location">Patient Current Location</label>
-                <input type="text" id="adt-hl7-patient-current-location" name="adt-hl7-patient-current-location"
-                  value="PV1[1].5">
+                <label for="hl7-parsing-algorithm">Parsing Algorithm</label>
+                <input type="text" id="hl7-parsing-algorithm" name="hl7-parsing-algorithm" value="HL7 ADT v2.x"
+                  readonly>
               </fieldset>
             </form>
-            <div class="button-group">
-              <button class="primary" disabled>Save</button>
-              <button class="secondary" disabled>Cancel</button>
-            </div>
+            <ul class="options">
+              <li>Edit configuration<span class="action"><a href="" class="button tertiary">Edit</a></span></li>
+            </ul>
           </div>
           <div class="card">
-            <h4>HL7 Configuration</h4>
-            <form id="adt-hl7-server-setup">
-              <fieldset>
-                <label for="hl7-local-ip-address">Local IP Address</label>
-                <input type="text" id="hl7-local-ip-address" name="hl7-local-ip-address" value="127.0.0.1" readonly>
-              </fieldset>
-              <fieldset class="small">
-                <label for="hl7-local-port">Local Port</label>
-                <input type="text" id="hl7-local-port" name="hl7-local-port" value="8000" readonly>
-              </fieldset>
-              <fieldset class="small">
-                <label for="hl7-connection-timeout">Connection Timeout (sec)</label>
-                <input type="number" id="hl7-connection-timeout" name="hl7-connection-timeout" value="86400" readonly>
-              </fieldset>
-              <fieldset>
-                <label for="hl7-parsing-algorithm">Parsing Algorithm</label>
-                <input type="text" id="hl7-parsing-algorithm" name="hl7-parsing-algorithm" value="HL7 ADT v2.x"
-                  readonly>
-              </fieldset>
-            </form>
-            <ul class="options">
-              <li>Edit configuration<span class="action"><a href="" class="button tertiary">Edit</a></span></li>
-            </ul>
+            <h4>Categorization</h4>
+            <table>
+              <caption>ADT Patient Data HL7 Entities</caption>
+              <thead>
+                <tr>
+                  <th scope="col">ADT Data Object</th>
+                  <th scope="col">HL7 Field Mapping</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td data-label="ADT Data Object">Event Type</td>
+                  <td data-label="HL7 Field Mapping">MHS[1].5.1</td>
+                </tr>
+                <tr>
+                  <td scope="row" data-label="ADT Data Object">Patient Name</td>
+                  <td data-label="HL7 Field Mapping">PID[1].3</td>
+                </tr>
+                <tr>
+                  <td scope="row" data-label="ADT Data Object">Patient Current Location</td>
+                  <td data-label="HL7 Field Mapping">PV1[1].5</td>
+                </tr>
+              </tbody>
+            </table>
           </div>
-        </div>
-        <!-- JUST TEXT DISPLAY IN THIS CARD FOR MAPPING INFO -->
-        <!-- <div class="card column-9">
-            <h4>ADT Patient Data HL7 Entities</h4>
-            <div class="row align-end">
-              <div class="column-3">
-                <small><b>Health Data Object</b></small>
-              </div>
-              <div class="column-9">
-                <small><b>HL7 Field Mapping</b></small>
-              </div>
-            </div>
-            <div class="row align-center" style="padding: 0;">
-              <div class="column-3">
-                <small>Event Type</small>
-              </div>
-              <div class="column-9">
-                <p>MHS[1].5.1</p>
-              </div>
-            </div>
-            <div class="row align-center">
-              <div class="column-3">
-                <small>Patient Name</small>
-              </div>
-              <div class="column-9">
-                <p>PID[1].3</p>
-              </div>
-            </div>
-            <div class="row align-center">
-              <div class="column-3">
-                <small>Patient Current Location</small>
-              </div>
-              <div class="column-9">
-                <p>PV1[1].5</p>
-              </div>
-            </div>
-          </div> -->
-        <!-- <div class="card column-3">
-            <h4>HL7 Configuration</h4>
-            <form id="adt-hl7-server-setup">
-              <fieldset>
-                <label for="hl7-local-ip-address">Local IP Address</label>
-                <input type="text" id="hl7-local-ip-address" name="hl7-local-ip-address" value="127.0.0.1" readonly>
-              </fieldset>
-              <fieldset class="small">
-                <label for="hl7-local-port">Local Port</label>
-                <input type="text" id="hl7-local-port" name="hl7-local-port" value="8000" readonly>
-              </fieldset>
-              <fieldset class="small">
-                <label for="hl7-connection-timeout">Connection Timeout (sec)</label>
-                <input type="number" id="hl7-connection-timeout" name="hl7-connection-timeout" value="86400" readonly>
-              </fieldset>
-              <fieldset>
-                <label for="hl7-parsing-algorithm">Parsing Algorithm</label>
-                <input type="text" id="hl7-parsing-algorithm" name="hl7-parsing-algorithm" value="HL7 ADT v2.x"
-                  readonly>
-              </fieldset>
-            </form>
-            <ul class="options">
-              <li>Edit configuration<span class="action"><a href="" class="button tertiary">Edit</a></span></li>
-            </ul>
-          </div> -->
         </div>
       </section>
     </article>
