--- a/projects/amen/views/categorization/index.html
+++ b/projects/amen/views/categorization/index.html
@@ -45,73 +45,156 @@
     <article>
       <h1>Categorization</h1>
       <h2>Deployed Agents by Customer</h2>
-      <div class="row cards">
-        <div class="card">
-          <h3>Yale Medical Center</h3>
-          <ul class="options">
-            <li>ADT Patient Data
-              <span class="action">
-                <span class="status valid">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                    stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
-                    class="icon icon-tabler icons-tabler-outline icon-tabler-check valid">
-                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                    <path d="M5 12l5 5l10 -10" />
-                  </svg>
-                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                    stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
-                    class="icon icon-tabler icons-tabler-outline icon-tabler-exclamation-mark invalid">
-                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                    <path d="M12 19v.01" />
-                    <path d="M12 15v-10" />
-                  </svg>
-                </span>
-                <a href="projects/amen/views/categorization/adt-categoriztion.html" class="button tertiary">Edit</a>
-              </span>
-            </li>
-            <li>Lab Results
-              <span class="action">
-                <span class="status">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                    stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
-                    class="icon icon-tabler icons-tabler-outline icon-tabler-check valid">
-                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                    <path d="M5 12l5 5l10 -10" />
-                  </svg>
-                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                    stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
-                    class="icon icon-tabler icons-tabler-outline icon-tabler-exclamation-mark invalid">
-                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                    <path d="M12 19v.01" />
-                    <path d="M12 15v-10" />
-                  </svg>
-                </span>
-                <a href="" class="button tertiary disabled">Edit</a>
-              </span>
-            </li>
-            <li>Order Requests
-              <span class="action">
-                <span class="status">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                    stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
-                    class="icon icon-tabler icons-tabler-outline icon-tabler-check valid">
-                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                    <path d="M5 12l5 5l10 -10" />
-                  </svg>
-                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                    stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
-                    class="icon icon-tabler icons-tabler-outline icon-tabler-exclamation-mark invalid">
-                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                    <path d="M12 19v.01" />
-                    <path d="M12 15v-10" />
-                  </svg>
-                </span>
-                <a href="" class="button tertiary disabled">Edit</a>
-              </span>
-            </li>
-          </ul>
+      <section id="yale-medical-center" style="padding: var(--spacing--16) 0 0;">
+        <h3>Yale Medical Center</h3>
+        <div class="row cards">
+          <div class="card column-4">
+            <h4>ADT Patient Data</h4>
+            <form>
+              <fieldset>
+                <label for="yale-adt-hl7-event-type">Event Type</label>
+                <input type="text" id="yale-adt-hl7-event-type" name="yale-adt-hl7-event-type" value="MHS[1].5.1">
+              </fieldset>
+              <fieldset>
+                <label for="yale-adt-hl7-patient-name">Patient Name</label>
+                <input type="text" id="yale-adt-hl7-patient-name" name="yale-adt-hl7-patient-name" value="PID[1].3">
+              </fieldset>
+              <fieldset>
+                <label for="yale-adt-hl7-patient-current-location">Patient Current Location</label>
+                <input type="text" id="yale-adt-hl7-patient-current-location"
+                  name="yale-adt-hl7-patient-current-location" value="PV1[1].5">
+              </fieldset>
+            </form>
+            <div class="button-group">
+              <button class="primary" disabled>Save</button>
+              <button class="secondary" disabled>Cancel</button>
+            </div>
+          </div>
+          <div class="card column-4">
+            <h4>Lab Results</h4>
+            <form>
+              <fieldset>
+                <label for="yale-adt-hl7-lab-results-event-type">Event Type</label>
+                <input type="text" id="yale-adt-hl7-lab-results-event-type" name="yale-adt-hl7-lab-results-event-type"
+                  value="MHS[1].5.1">
+              </fieldset>
+              <fieldset>
+                <label for="yale-adt-hl7-lab-results-patient-name">Patient Name</label>
+                <input type="text" id="yale-adt-hl7-lab-results-patient-name"
+                  name="yale-adt-hl7-lab-results-patient-name" value="PID[1].3">
+              </fieldset>
+              <fieldset>
+                <label for="yale-adt-hl7-lab-results-patient-current-location">Patient Current Location</label>
+                <input type="text" id="yale-adt-hl7-lab-results-patient-current-location"
+                  name="yale-adt-hl7-lab-results-patient-current-location" value="PV1[1].5">
+              </fieldset>
+            </form>
+            <div class="button-group">
+              <button class="primary" disabled>Save</button>
+              <button class="secondary" disabled>Cancel</button>
+            </div>
+          </div>
+          <div class="card column-4">
+            <h4>Order Requests</h4>
+            <form>
+              <fieldset>
+                <label for="yale-adt-hl7-order-requests-event-type">Event Type</label>
+                <input type="text" id="yale-adt-hl7-order-requests-event-type"
+                  name="yale-adt-hl7-order-requests-event-type" value="MHS[1].5.1">
+              </fieldset>
+              <fieldset>
+                <label for="yale-adt-hl7-order-requests-patient-name">Patient Name</label>
+                <input type="text" id="yale-adt-hl7-order-requests-patient-name"
+                  name="yale-adt-hl7-order-requests-patient-name" value="PID[1].3">
+              </fieldset>
+              <fieldset>
+                <label for="yale-adt-hl7-order-requests-patient-current-location">Patient Current Location</label>
+                <input type="text" id="yale-adt-hl7-order-requests-patient-current-location"
+                  name="yale-adt-hl7-order-requests-patient-current-location" value="PV1[1].5">
+              </fieldset>
+            </form>
+            <div class="button-group">
+              <button class="primary" disabled>Save</button>
+              <button class="secondary" disabled>Cancel</button>
+            </div>
+          </div>
         </div>
-      </div>
+      </section>
+      <section id="tufts">
+        <h3>Tufts</h3>
+        <div class="row cards">
+          <div class="card column-4">
+            <h4>ADT Patient Data</h4>
+            <form>
+              <fieldset>
+                <label for="tufts-adt-hl7-event-type">Event Type</label>
+                <input type="text" id="tufts-adt-hl7-event-type" name="tufts-adt-hl7-event-type" value="MHS[1].5.1">
+              </fieldset>
+              <fieldset>
+                <label for="tufts-adt-hl7-patient-name">Patient Name</label>
+                <input type="text" id="tufts-adt-hl7-patient-name" name="tufts-adt-hl7-patient-name" value="PID[1].3">
+              </fieldset>
+              <fieldset>
+                <label for="tufts-adt-hl7-patient-current-location">Patient Current Location</label>
+                <input type="text" id="tufts-adt-hl7-patient-current-location"
+                  name="tufts-adt-hl7-patient-current-location" value="PV1[1].5">
+              </fieldset>
+            </form>
+            <div class="button-group">
+              <button class="primary" disabled>Save</button>
+              <button class="secondary" disabled>Cancel</button>
+            </div>
+          </div>
+          <div class="card column-4">
+            <h4>Lab Results</h4>
+            <form>
+              <fieldset>
+                <label for="tufts-adt-hl7-lab-results-event-type">Event Type</label>
+                <input type="text" id="tufts-adt-hl7-lab-results-event-type" name="tufts-adt-hl7-lab-results-event-type"
+                  value="MHS[1].5.1">
+              </fieldset>
+              <fieldset>
+                <label for="tufts-adt-hl7-lab-results-patient-name">Patient Name</label>
+                <input type="text" id="tufts-adt-hl7-lab-results-patient-name"
+                  name="tufts-adt-hl7-lab-results-patient-name" value="PID[1].3">
+              </fieldset>
+              <fieldset>
+                <label for="tufts-adt-hl7-lab-results-patient-current-location">Patient Current Location</label>
+                <input type="text" id="tufts-adt-hl7-lab-results-patient-current-location"
+                  name="tufts-adt-hl7-lab-results-patient-current-location" value="PV1[1].5">
+              </fieldset>
+            </form>
+            <div class="button-group">
+              <button class="primary" disabled>Save</button>
+              <button class="secondary" disabled>Cancel</button>
+            </div>
+          </div>
+          <div class="card column-4">
+            <h4>Order Requests</h4>
+            <form>
+              <fieldset>
+                <label for="tufts-adt-hl7-order-requests-event-type">Event Type</label>
+                <input type="text" id="tufts-adt-hl7-order-requests-event-type"
+                  name="tufts-adt-hl7-order-requests-event-type" value="MHS[1].5.1">
+              </fieldset>
+              <fieldset>
+                <label for="tufts-adt-hl7-order-requests-patient-name">Patient Name</label>
+                <input type="text" id="tufts-adt-hl7-order-requests-patient-name"
+                  name="tufts-adt-hl7-order-requests-patient-name" value="PID[1].3">
+              </fieldset>
+              <fieldset>
+                <label for="tufts-adt-hl7-order-requests-patient-current-location">Patient Current Location</label>
+                <input type="text" id="tufts-adt-hl7-order-requests-patient-current-location"
+                  name="tufts-adt-hl7-order-requests-patient-current-location" value="PV1[1].5">
+              </fieldset>
+            </form>
+            <div class="button-group">
+              <button class="primary" disabled>Save</button>
+              <button class="secondary" disabled>Cancel</button>
+            </div>
+          </div>
+        </div>
+      </section>
     </article>
   </main>
   <footer>
