--- a/style/_scss/_cards.scss
+++ b/style/_scss/_cards.scss
@@ -267,3 +267,79 @@ html.dark {
     }
   }
 }
+
+
+// ROWS AND COLUMNS IN CARDS
+.card {
+  .row {
+    &+.row {
+      padding: $spacing-8 0 0;
+    }
+
+    .column-11,
+    .column-10,
+    .column-9,
+    .column-8,
+    .column-7,
+    .column-6,
+    .column-5,
+    .column-4,
+    .column-3,
+    .column-2,
+    .column-1 {
+      display: inline-block;
+      width: calc((100% / 2) - $spacing-8);
+    }
+  }
+}
+
+@media (min-width: 40rem) {
+  .card {
+    .row {
+
+      .column-11 {
+        width: calc((100% / 12) * 11);
+      }
+
+      .column-10 {
+        width: calc((100% / 12) * 10);
+      }
+
+      .column-9 {
+        width: calc((100% / 12) * 9);
+      }
+
+      .column-8 {
+        width: calc((100% / 12) * 8);
+      }
+
+      .column-7 {
+        width: calc((100% / 12) * 7);
+      }
+
+      .column-6 {
+        width: calc((100% / 12) * 6);
+      }
+
+      .column-5 {
+        width: calc((100% / 12) * 5);
+      }
+
+      .column-4 {
+        width: calc((100% / 12) * 4);
+      }
+
+      .column-3 {
+        width: calc((100% / 12) * 3);
+      }
+
+      .column-2 {
+        width: calc((100% / 12) * 2);
+      }
+
+      .column-1 {
+        width: calc(100% / 12);
+      }
+    }
+  }
+}
