--- a/style/_scss/_variables.scss
+++ b/style/_scss/_variables.scss
@@ -22,8 +22,9 @@
   --color--bg-dark-content: #404040;
   --color--bg-light: #e6e6e6;
   --color--bg-light-content: #ffffff;
-  --color--border: #c5c5c5;
-  --color--status-disabled: #888b8d;
+  --color--border: #a5a5a5;
+  --color--status-disabled: #dadada;
+  --color--status-disabled-dark: #737373;
   --color--status-invalid: #c63531;
   --color--status-readonly: #000000;
   --color--status-valid: #007a4d;
@@ -68,6 +69,7 @@ $color--bg-light: var(--color--bg-light);
 $color--bg-light-content: var(--color--bg-light-content);
 $color--border: var(--color--border);
 $color--status-disabled: var(--color--status-disabled);
+$color--status-disabled-dark: var(--color--status-disabled-dark);
 $color--status-invalid: var(--color--status-invalid);
 $color--status-readonly: var(--color--status-readonly);
 $color--status-valid: var(--color--status-valid);
