--- a/style/master.css
+++ b/style/master.css
@@ -586,7 +586,6 @@ fieldset.toggle label {
 fieldset.toggle label:last-of-type {
   margin: 0;
 }
-fieldset.toggle label input,
 fieldset.toggle label input[type=checkbox] {
   display: inline-flex;
   position: absolute;
@@ -605,7 +604,6 @@ fieldset.toggle label input[type=checkbox] {
   -moz-appearance: none;
   appearance: none;
 }
-fieldset.toggle label input:after,
 fieldset.toggle label input[type=checkbox]:after {
   display: block;
   position: absolute;
@@ -628,7 +626,6 @@ fieldset.toggle label input[type=checkbox]:checked:after {
 fieldset.toggle label.reverse {
   padding: 0 0 0 3rem;
 }
-fieldset.toggle label.reverse input,
 fieldset.toggle label.reverse input[type=checkbox] {
   right: auto;
   left: 0;
@@ -757,14 +754,99 @@ fieldset.column-1 {
 }
 input:disabled,
 select:disabled {
-  border-color: var(--color--status-disabled-dark);
-  color: var(--color--status-disabled-dark);
+  border-color: var(--color--status-disabled);
+  color: var(--color--status-disabled);
+}
+
+input[type=checkbox]:disabled + label:before {
+  border-color: var(--color--status-disabled);
+}
+
+input[type=checkbox]:checked:disabled + label:after {
+  background-color: var(--color--status-disabled);
+}
+
+fieldset.radio input[type=radio]:disabled + label:before {
+  border-color: var(--color--status-disabled);
+}
+fieldset.radio input[type=radio]:disabled + label:after {
+  background-color: var(--color--status-disabled);
+}
+
+fieldset.toggle input[type=checkbox]:disabled,
+fieldset.toggle input[type=checkbox]:checked:disabled {
+  border-color: var(--color--status-disabled);
+}
+fieldset.toggle input[type=checkbox]:disabled:after,
+fieldset.toggle input[type=checkbox]:checked:disabled:after {
+  background-color: var(--color--status-disabled);
+}
+
+fieldset.range input[type=range] {
+  accent-color: var(--color--status-disabled);
+}
+fieldset.range input[type=range]::-webkit-slider-runnable-track {
+  background-color: var(--color--status-disabled);
+}
+fieldset.range input[type=range]::-moz-range-track {
+  background-color: var(--color--status-disabled);
+}
+fieldset.range input[type=range]::-webkit-slider-thumb {
+  border-color: var(--color--status-disabled);
+  background-color: var(--color--status-disabled);
+}
+fieldset.range input[type=range]::-moz-range-thumb {
+  border-color: var(--color--status-disabled);
+  background-color: var(--color--status-disabled);
 }
 
 html.dark input:disabled,
 html.dark select:disabled {
   border-color: var(--color--status-disabled-dark);
   color: var(--color--status-disabled-dark);
+}
+html.dark input[type=checkbox]:disabled + label:before {
+  border-color: var(--color--status-disabled-dark);
+}
+html.dark input[type=checkbox]:checked:disabled + label:after {
+  background-color: var(--color--status-disabled-dark);
+}
+html.dark fieldset.radio input[type=radio]:disabled + label:before {
+  border-color: var(--color--status-disabled-dark);
+}
+html.dark fieldset.radio input[type=radio]:disabled + label:after {
+  background-color: var(--color--status-disabled-dark);
+}
+html.dark fieldset.toggle input[type=checkbox]:disabled,
+html.dark fieldset.toggle input[type=checkbox]:checked:disabled {
+  border-color: var(--color--status-disabled-dark);
+}
+html.dark fieldset.toggle input[type=checkbox]:disabled:after,
+html.dark fieldset.toggle input[type=checkbox]:checked:disabled:after {
+  background-color: var(--color--status-disabled-dark);
+}
+html.dark fieldset.range input[type=range] {
+  accent-color: var(--color--status-disabled-dark);
+}
+html.dark fieldset.range input[type=range]::-webkit-slider-runnable-track {
+  background-color: var(--color--status-disabled-dark);
+}
+html.dark fieldset.range input[type=range]::-moz-range-track {
+  background-color: var(--color--status-disabled-dark);
+}
+html.dark fieldset.range input[type=range]::-webkit-slider-thumb {
+  border-color: var(--color--status-disabled-dark);
+  background-color: var(--color--status-disabled-dark);
+}
+html.dark fieldset.range input[type=range]::-moz-range-thumb {
+  border-color: var(--color--status-disabled-dark);
+  background-color: var(--color--status-disabled-dark);
+}
+
+input:invalid,
+select:invalid {
+  border-color: var(--color--status-invalid);
+  color: var(--color--status-invalid);
 }
 
 table {
