--- a/style/_scss/_rows.scss
+++ b/style/_scss/_rows.scss
@@ -18,6 +18,10 @@
   justify-content: flex-end;
 }
 
+.row.flex-start {
+  justify-content: flex-start;
+}
+
 .row.space-between {
   justify-content: space-between;
 }
