Fixed align-items setting
on card rows for categorization page

--- a/projects/amen/views/categorization/index.html
+++ b/projects/amen/views/categorization/index.html
@@ -47,7 +47,7 @@
       <h2>Deployed Agents by Customer</h2>
       <section id="yale-medical-center" style="padding: var(--spacing--16) 0 0;">
         <h3>Yale Medical Center</h3>
-        <div class="row cards flex-start">
+        <div class="row cards align-start">
           <div class="card column-4">
             <h4>ADT Patient Data</h4>
             <form id="yale-adt-patient-data">
@@ -719,7 +719,7 @@
       </section>
       <section id="tufts">
         <h3>Tufts</h3>
-        <div class="row cards flex-start">
+        <div class="row cards align-start">
           <div class="card column-4">
             <h4>ADT Patient Data</h4>
             <form id="tufts-adt-patient-data">
