--- a/projects/amen/views/dashboard/index.html
+++ b/projects/amen/views/dashboard/index.html
@@ -35,9 +35,7 @@
     <nav>
       <ul>
         <li>Dashboard</li>
-        <!-- <li><a href="projects/amen/views/integration/index.html">Integration</a></li>
-          <li><a href="projects/amen/views/configuration/index.html">Configuration</a></li> -->
-        <li><a href="projects/amen/views/categorization/index.html">Categorization</a></li>
+        <li><a href="projects/amen/views/mapping/index.html">Mapping</a></li>
       </ul>
     </nav>
   </header>
@@ -45,14 +43,14 @@
     <article>
       <h1>Dashboard</h1>
       <section>
-        <h2>Deployed Agents by Customer</h2>
+        <h2>Deployed Agents</h2>
         <div class="row cards">
           <div class="card">
-            <h3>Yale Medical Center</h3>
+            <h3>Yale Medical Center INT-1</h3>
             <ul class="options">
               <li>ADT Patient Data
                 <span class="action">
-                  <span class="status valid">
+                  <span class="status invalid">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                       stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
                       class="icon icon-tabler icons-tabler-outline icon-tabler-check valid">
@@ -68,6 +66,7 @@
                     </svg>
                   </span>
                   <!-- <a href="" class="button tertiary">Edit</a> -->
+                  <button class="tertiary" disabled>Edit</button>
                 </span>
               </li>
               <li>Lab Results
@@ -87,12 +86,13 @@
                       <path d="M12 15v-10" />
                     </svg>
                   </span>
-                  <!-- <a href="" class="button tertiary">Edit</a> -->
+                  <a href="projects/amen/views/mapping/lab-results/index.html" class="button tertiary">Edit</a>
+                  <!-- <button class="tertiary" disabled>Edit</button> -->
                 </span>
               </li>
               <li>Order Requests
                 <span class="action">
-                  <span class="status valid">
+                  <span class="status invalid">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
                       stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
                       class="icon icon-tabler icons-tabler-outline icon-tabler-check valid">
@@ -108,82 +108,11 @@
                     </svg>
                   </span>
                   <!-- <a href="" class="button tertiary">Edit</a> -->
+                  <button class="tertiary" disabled>Edit</button>
                 </span>
               </li>
             </ul>
             <ul class="options">
-              <li>Edit Categorization<a href="projects/amen/views/categorization/index.html#yale-medical-center"
-                  class="button tertiary">Edit</a></li>
-              <li>Edit Configuration<button class="tertiary" disabled>Edit</button></li>
-            </ul>
-          </div>
-          <div class="card">
-            <h3>Tufts</h3>
-            <ul class="options">
-              <li>ADT Patient Data
-                <span class="action">
-                  <span class="status valid">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                      stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
-                      class="icon icon-tabler icons-tabler-outline icon-tabler-check valid">
-                      <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                      <path d="M5 12l5 5l10 -10" />
-                    </svg>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                      stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
-                      class="icon icon-tabler icons-tabler-outline icon-tabler-exclamation-mark invalid">
-                      <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                      <path d="M12 19v.01" />
-                      <path d="M12 15v-10" />
-                    </svg>
-                  </span>
-                  <!-- <a href="" class="button tertiary">Edit</a> -->
-                </span>
-              </li>
-              <li>Lab Results
-                <span class="action">
-                  <span class="status valid">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                      stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
-                      class="icon icon-tabler icons-tabler-outline icon-tabler-check valid">
-                      <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                      <path d="M5 12l5 5l10 -10" />
-                    </svg>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                      stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
-                      class="icon icon-tabler icons-tabler-outline icon-tabler-exclamation-mark invalid">
-                      <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                      <path d="M12 19v.01" />
-                      <path d="M12 15v-10" />
-                    </svg>
-                  </span>
-                  <!-- <a href="" class="button tertiary">Edit</a> -->
-                </span>
-              </li>
-              <li>Order Requests
-                <span class="action">
-                  <span class="status valid">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                      stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
-                      class="icon icon-tabler icons-tabler-outline icon-tabler-check valid">
-                      <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                      <path d="M5 12l5 5l10 -10" />
-                    </svg>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
-                      stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"
-                      class="icon icon-tabler icons-tabler-outline icon-tabler-exclamation-mark invalid">
-                      <path stroke="none" d="M0 0h24v24H0z" fill="none" />
-                      <path d="M12 19v.01" />
-                      <path d="M12 15v-10" />
-                    </svg>
-                  </span>
-                  <!-- <a href="" class="button tertiary">Edit</a> -->
-                </span>
-              </li>
-            </ul>
-            <ul class="options">
-              <li>Edit Categorization<a href="projects/amen/views/categorization/index.html#tufts"
-                  class="button tertiary">Edit</a></li>
               <li>Edit Configuration<button class="tertiary" disabled>Edit</button></li>
             </ul>
           </div>
