--- a/projects/amen/views/template.html
+++ b/projects/amen/views/template.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,height=device-height,initial-scale=1,minimum-scale=1">
-  <title>AMEN Configuration Skunk Works | TigerConnect</title>
-  <base href="../../../../">
+  <title>AMEN Skunk Works | TigerConnect</title>
+  <base href="../../../">
   <!-- css -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
     integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
@@ -41,7 +41,7 @@
   </header>
   <main>
     <article>
-      <h1>Configuration</h1>
+      <h1></h1>
     </article>
   </main>
   <footer>
